# openflow_template

./: .gitignore  Makefile  README.md
ex1/src/: cipher_core.sv  cipher_pkg.sv  cipher_wrapper_ex1.sv  counter.sv  multiplier.sv
ex1/tb/: cipher_wrapper_ex1_tb.sv  tb_cocotb.py  tb_counter.py
ex2/src/: bus_if.sv  cipher_peripheral.sv  cipher_wrapper_ex2.sv
ex2/sw/: makehex.py
ex2/sw/common/: objects.cmake  postprocessing.cmake  riscv32-ibex-newlib-nano.cmake  riscv32.cmake
ex2/sw/hello-world/: CMakeLists.txt  hello-world.c
ex2/sw/libgloss/: CMakeLists.txt  ibex-newlib-nano.specs.in  ibex.ld.in
ex2/sw/libgloss/ibex/: crt0.S  ibex-pario.h  syscalls.c
ex2/tb/: tb_cocotb.py  tb_top.sv
ex2/tb/cipher_empty/: cipher_wrapper_ex2.sv
ex2/tb/models/: sky130_rom_4kbyte_1r_32x1024.v  sky130_sram_2kbyte_1rw1r_32x512_8.v
open-flow/ex1_aux/: config.json  pins.cfg
open-flow/ex2_aux/: build.py  config.json  pins.cfg
open-flow/ex2_aux/def/: cipher_wrapper_ex2.def
open-flow/ex2_aux/ibex-verilog/: .gitignore  Makefile  README.md  ibex.v  ibex_soc.v
open-flow/ex2_aux/ibex-verilog/ibex_soc/: blinky_wrapper.sv  bus_arbiter2m1s.sv  bus_if.sv  bus_mux1mNs.sv  cipher_wrapper.sv  ibex_soc.sv  ibex_soc_pkg.sv  parallel_out.sv  ram_wrapper.sv  rom_wrapper.sv  synchronizer.sv  uart_rx.sv  uart_tx.sv  uart_wrapper.sv
open-flow/tapeout/: replace_cells.py
open-flow/tapeout/chip_art/: chip_art.gds  chip_art.lef  chip_art.py  gds2lef.tcl
open-flow/tapeout/rom/: sky130_rom_4kbyte_32_inst0.py  sky130_rom_4kbyte_32_inst1.py
results/: .gitignore
(+10 files in other folders)
